# ChewyBBTalk

./: .dockerignore  .env.dev  .env.example  .gitignore  CHECKLIST.md  Dockerfile  Dockerfile.cn  INTEGRATION.md  MAIN_APP_INTEGRATION.js  PROJECT_SUMMARY.md  PWA_FIX_NOTES.md  README.md  ROADMAP.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  generate-cert.sh  nginx.conf  nginx.dev.conf  nginx.dev.conf.tmpl  nginx.dev.https.conf.tmpl  nginx.dev.simple.conf  nginx.example.conf  nginx.host.example.conf  start-dev.sh  start_backend.sh  start_django.sh  supervisord.conf
backend/: Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt
backend/chewy_space/: manage.py
backend/chewy_space/bbtalk/: admin.py  apps.py  attachment_urls.py  attachment_views.py  authentication.py  data_export.py  data_import.py  models.py  privacy_views.py  serializers.py  storage.py  storage_migration.py  storage_provider.py  tests.py  urls.py  views.py
backend/chewy_space/chewy_space/: asgi.py  openapi_hooks.py  settings.py  urls.py  wsgi.py
backend/chewy_space/common/: admin.py  models.py
backend/chewy_space/configs/: dev_settings.py
backend/chewy_space/media/: admin.py  apps.py  choices.py  models.py  serializers.py  storage.py  tests.py  urls.py  views.py
backend/chewy_space/tags/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/chewy_space/user_auth/: admin.py  apps.py  authentication.py  models.py  permissions.py  urls.py  views.py
backend/tests/: check_tables.py  test_api_auth.py  test_auth.py  test_jwt.py
mobile/: App.tsx  (+8 more)
(+310 files in other folders)
