[project]
name = "chewy-space"
version = "0.1.0"
description = "BBTalk Backend Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=24.0",
    "drf-spectacular>=0.27.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "chewy-attachment[django]>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
